--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
+  "type": "module",
   "description": "This my first project.",
   "main": "index.js",
   "scripts": {
