--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
-  "type": "module",
+	"type": "module",
+	"bin": {
+		"brain-games": "bin/brain-games.js"
+	},
   "description": "This my first project.",
   "main": "index.js",
   "scripts": {
